lab_01/instructor_stderr.txt
  File "print_flight_schedule.py", line 4
    with open(fn,'wt') as f:
       ^
IndentationError: expected an indented block
